suite icon update on test execution end

--- a/TestNGWebApp/src/main/webapp/css/mystyle.css
+++ b/TestNGWebApp/src/main/webapp/css/mystyle.css
@@ -13,6 +13,11 @@ body, html {
        display:none;
 }
 
+.col-padding {
+	padding: 30;
+}
+
+
 #testInfo {
     position: absolute;
     z-index: 1000;
